# sentinela-rs

./: README.md  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  sentinela.nginx  users.sql
.github/workflows/: ci.yml
ai-service/: main.py
ai-service/app/: main.py  model.py  preprocessing.py
backend-rust/: Cargo.toml  Dockerfile
backend-rust/src/: ai_proxy.rs  alerts.rs  auth.rs  db.rs  main.rs  metrics.rs  middleware.rs  models.rs  parser.rs  redis_queue.rs  routes.rs  websocket.rs  ws.rs
backend-rust/src/auth/: jwt.rs  middleware.rs  mod.rs  oauth.rs
backend-rust/src/handlers/: auth_handler.rs  ws_handler.rs
backend-rust/src/models/: alert.rs  user.rs
backend-rust/src/ws/: server.rs
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/alerts/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/proxy/: route.ts
frontend/app/upload/: page.tsx
frontend/components/: AlertCard.tsx  AuthGuard.tsx  Header.tsx  Navbar.tsx  RealtimeChart.tsx  RealtimeSocket.tsx  Sidebar.tsx  TopMenu.tsx  Topbar.tsx  UploadForm.tsx
frontend/lib/: api.ts  auth.ts
k8s/: ai.yaml  backend.yaml  frontend.yaml  ingress.yaml  init.sql  redis.yaml
sentinela-mobile/: App.tsx  app.json  package-lock.json  package.json
sentinela-mobile/screens/: Alerts.tsx  AlertsScreen.tsx  DashboardScreen.tsx  LoginScreen.tsx
sentinela-mobile/services/: api.ts  socket.ts
sentinela-mobile/storage/: auth.ts
